syntax = "proto3";

service RaftNode {
      rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
      rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
      rpc AddServer(AddServerRequest) returns (MembershipChangeResponse);
      rpc RemoveServer(RemoveServerRequest) returns (MembershipChangeResponse);
}

message RequestVoteRequest {
    int32 term = 1;
    string candidate_id = 2;
    int32 last_log_index = 3;
    int32 last_log_term = 4;
}

message RequestVoteResponse {
    int32 term = 1;
    bool vote_granted = 2;
}

message AppendEntriesRequest {
    int32 term = 1;
    string leader_id = 2;
    int32 prev_log_index = 3;
    int32 prev_log_term = 4;
    repeated LogEntry entries = 5;
    int32 leader_commit = 6;
}

message AppendEntriesResponse {
    int32 term = 1;
    bool success = 2;
}

message AddServerRequest {
    string new_server = 1;
}

message RemoveServerRequest {
    string old_server = 1;
}

message MembershipChangeResponse {
    MEMBERSHIP_CHANGES_RESPONSES status = 1;
    string leader_hint = 2;
}

message AddCommand {
    CommandType type = 1;
    string data = 2;
}

message LogEntry {
    string type = 1;
    string data = 2;
}

enum MEMBERSHIP_CHANGES_RESPONSES{
    OK = 0;
    NOT_LEADER = 1;
}

enum CommandType {
    TESTING = 0; // ONLY TO BE USED IN TESTING.
    NOOP = 1;
    MEMBERSHIP_ADD = 2;
    MEMBERSHIP_REMOVE = 3;
}